--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,6 @@ huggingface-hub==0.21.1
 hydra-core==1.3.2
 idna==3.4
 importlib-resources==5.12.0
-install==1.3.5
 ipykernel==6.27.1
 ipython==8.18.1
 ipywidgets==8.1.1
@@ -102,16 +101,29 @@ notebook_shim==0.2.3
 numba==0.59.0
 numpy==1.24.2
 nvidia-cublas-cu11==11.10.3.66
+nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-cupti-cu12==12.4.127
 nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-nvrtc-cu12==12.4.127
 nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cuda-runtime-cu12==12.4.127
 nvidia-cudnn-cu11==8.5.0.96
+nvidia-cudnn-cu12==9.1.0.70
 nvidia-cufft-cu11==10.9.0.58
+nvidia-cufft-cu12==11.2.1.3
 nvidia-curand-cu11==10.2.10.91
+nvidia-curand-cu12==10.3.5.147
 nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusolver-cu12==11.6.1.9
 nvidia-cusparse-cu11==11.7.4.91
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
 nvidia-nccl-cu11==2.14.3
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu11==11.7.91
+nvidia-nvtx-cu12==12.4.127
 omegaconf==2.3.0
 overrides==7.4.0
 packaging==23.0
@@ -123,6 +135,7 @@ pathspec==0.12.1
 pathtools==0.1.2
 pexpect==4.9.0
 Pillow==9.5.0
+pip-install==1.3.5
 platformdirs==4.1.0
 pox==0.3.2
 ppft==1.7.6.6
@@ -166,23 +179,23 @@ smmap==5.0.0
 sniffio==1.3.0
 soupsieve==2.5
 stack-data==0.6.3
-sympy==1.11.1
+sympy==1.13.1
 terminado==0.18.0
 threadpoolctl==3.1.0
 tinycss2==1.2.1
 tokenizers==0.15.2
 tomli==2.0.1
-torch==2.0.0
-torchaudio==2.0.1
+torch==2.6.0
+torchaudio==2.6.0
 torchmetrics==0.11.4
-torchvision==0.15.1
+torchvision==0.21.0
 tornado==6.4
 tqdm==4.65.0
 traitlets==5.14.0
 transformers==4.38.1
-triton==2.0.0
+triton==3.2.0
 types-python-dateutil==2.8.19.14
-typing_extensions==4.5.0
+typing_extensions==4.12.2
 tzdata==2023.3
 uri-template==1.3.0
 urllib3==1.26.15
